--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,3 @@
-#server:
-#  port: 8098
 spring:
-  jpa:
-    database: POSTGRESQL
-    hibernate:
-      ddl-auto: update
-
-  datasource:
-    platform: postgres
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
-#    driverClassName: org.postgresql.Driver
-  security:
-    enabled: true
-
-shopiify:
-  app:
-    jwtSecret: ${jwtSecret}
-    jwtExpirationMs: 900000
+  profiles:
+    active: dev
