--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/shopiify2
 #    username: ${DATABASE_USER}
 #    password: ${DATABASE_PASSWORD}
-#    driverClassName: org.postgresql.Driver
+    driverClassName: org.postgresql.Driver
   security:
     enabled: true
 
